Fixing marginon smaller screens
padding on the topbar looked bad when viewing on mobile, this adds a little bit of margin so it's not up against the edge of the screen

--- a/Web/Client/wwwroot/css/app.css
+++ b/Web/Client/wwwroot/css/app.css
@@ -516,6 +516,11 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
 .flex {
   display: flex;
 }
@@ -717,6 +722,11 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .lg\:ml-1 {
     margin-left: 0.25rem;
   }
